--- a/mysites.html
+++ b/mysites.html
@@ -9,7 +9,7 @@
       <a class="link-header" href="index.html">Главная</a>
     </header>
     <main>
-      <img src="https://cdn-icons-png.flaticon.com/512/7088/7088559.png" width="300px" height="300px"/>
+      <img class="alihan" src="https://cdn-icons-png.flaticon.com/512/7088/7088559.png" width="300px" height="300px"/>
       <section>
         <div>
           <h1>Мои сайты</h1>
